--- a/index.html
+++ b/index.html
@@ -11,39 +11,10 @@
 
 <body>
     <div class="container p-5">
-      <ul class="list-group">
-        <li class="list-group-item active">Active item</li>
-        <li class="list-group-item">Second item</li>
-        <li class="list-group-item">Third item</li>
-      </ul>
-
-      <ol class="list-group list-group-numbered">
-        <li class="list-group-item">First item</li>
-        <li class="list-group-item">Second item</li>
-        <li class="list-group-item">Third item</li>
-      </ol>
-
-      <ul class="list-group list-group-horizontal">
-        <li class="list-group-item">First item</li>
-        <li class="list-group-item">Second item</li>
-        <li class="list-group-item">Third item</li>
-        <li class="list-group-item">Fourth item</li>
-      </ul>
-
-      <ul class="list-group">
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-          Inbox
-          <span class="badge bg-primary rounded-pill">12</span>
-        </li>
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-          Ads
-          <span class="badge bg-primary rounded-pill">50</span>
-        </li>
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-          Junk
-          <span class="badge bg-primary rounded-pill">99</span>
-        </li>
-      </ul>
+      <div class="row">
+        <div class="col-sm-6 bg-primary text-white">1</div>
+        <div class="col-sm-6 bg-dark text-white">2</div>
+      </div>
     </div>
 
 </body>
