--- a/index.html
+++ b/index.html
@@ -11,10 +11,38 @@
 
 <body>
     <div class="container p-5">
-      <div class="row">
-        <div class="col-sm-6 bg-primary text-white">1</div>
-        <div class="col-sm-6 bg-dark text-white">2</div>
+      <div class="form-floating mb-3 mt-3">
+        <input type="text" class="form-control" id="email" placeholder="Enter email" name="email">
+        <label for="email">Email</label>
       </div>
+      
+      <div class="form-floating mt-3 mb-3">
+        <input type="text" class="form-control" id="pwd" placeholder="Enter password" name="pswd">
+        <label for="pwd">Password</label>
+      </div>
+      <form>
+        <div class="input-group">
+          <span class="input-group-text">@</span>
+          <input type="text" class="form-control" placeholder="Username">
+        </div>
+      
+        <div class="input-group my-3">
+          <input type="text" class="form-control" placeholder="Your Email">
+          <span class="input-group-text">@example.com</span>
+        </div>
+
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" id="check1" name="option1" value="something" checked>
+          <label class="form-check-label">Option 1</label>
+        </div>
+
+        <select class="form-select form-select-lg">
+          <option>1</option>
+          <option>2</option>
+          <option>3</option>
+          <option>4</option>
+        </select>
+      </form>
     </div>
 
 </body>
