--- a/index.html
+++ b/index.html
@@ -2,48 +2,49 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/style.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="/style.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
-    <div class="container p-5">
-      <div class="form-floating mb-3 mt-3">
-        <input type="text" class="form-control" id="email" placeholder="Enter email" name="email">
-        <label for="email">Email</label>
-      </div>
-      
-      <div class="form-floating mt-3 mb-3">
-        <input type="text" class="form-control" id="pwd" placeholder="Enter password" name="pswd">
-        <label for="pwd">Password</label>
-      </div>
-      <form>
-        <div class="input-group">
-          <span class="input-group-text">@</span>
-          <input type="text" class="form-control" placeholder="Username">
-        </div>
-      
-        <div class="input-group my-3">
-          <input type="text" class="form-control" placeholder="Your Email">
-          <span class="input-group-text">@example.com</span>
-        </div>
+  <div class="container p-5">
+    <div class="container mt-3">
+      <h3>Modal Example</h3>
+      <p>Click on the button to open the modal.</p>
 
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" id="check1" name="option1" value="something" checked>
-          <label class="form-check-label">Option 1</label>
-        </div>
-
-        <select class="form-select form-select-lg">
-          <option>1</option>
-          <option>2</option>
-          <option>3</option>
-          <option>4</option>
-        </select>
-      </form>
+      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">
+        Open modal
+      </button>
     </div>
+
+    <!-- The Modal -->
+    <div class="modal" id="myModal">
+      <div class="modal-dialog">
+        <div class="modal-content">
+
+          <!-- Modal Header -->
+          <div class="modal-header">
+            <h4 class="modal-title">Modal Heading</h4>
+            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+          </div>
+
+          <!-- Modal body -->
+          <div class="modal-body">
+            Modal body..
+          </div>
+
+          <!-- Modal footer -->
+          <div class="modal-footer">
+            <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
 
 </body>
 
